test/spec_vectors/unreached-invalid/fail/module_119.wat
(module (type $t (func (param i32) (result i64))) (func (result i32) (unreachable) (call_ref $t)))